SERVER-54504 removed taskExecutorPoolSize for linux platform